src/test/deca/context/valid/ext/TAB_field_simple.deca
class A{
    int[] a = new int[4];
    float[][] b;

    int[][] method(){
        return new int[5][5];
    }
}