src/test/deca/context/invalid/ext/TAB_access_nodeclare.deca
{
    float[] a = new float[5];
    a[x];
}